--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -107,6 +107,9 @@
       </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/dashboard.js"></script>
+    <script src="js/auth.js"></script>
+
   </body>
 </html>
