--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <p id="msg"></p>
   </main>
 
+  <script src="js/config.js"></script>
   <script src="js/login.js"></script>
 </body>
 </html>
